--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "emailjs-com": "^3.2.0",
+    "formik": "^2.4.6",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-bubbles": "^0.0.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
-    "tsparticles": "^3.5.0"
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "tsparticles": "^3.5.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
