--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "concurrently \"vite --host\" \"nodemon server/index.js\"",
-    "build": "concurrently \"vite --host\" \"nodemon server/index.js\"",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite build && vite preview --host",
