--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
