--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "build:dev": "vite build && nodemon server/index.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.5",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -29,13 +34,15 @@
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-bubbles": "^0.0.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.5.0",
