--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@react-oauth/google": "^0.12.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "body-parser": "^1.20.3",
@@ -35,7 +36,9 @@
     "react": "^18.3.1",
     "react-bubbles": "^0.0.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-google-calendar-api": "^2.3.0",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.0",
