--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "vite": "^5.4.1"
   },
   "config": {
-    "production_url": "https://mmt.galico.io"
+    "production_url": "https://maggiesmagictouch.com"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
