--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "maggiesmagictouch",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite --host\" \"nodemon server/index.js\"",
+    "dev": "concurrently \"vite --host\" \"nodemon server/index.mjs\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist",
+    "start": "concurrently \"serve -s dist\" \"node server/index.mjs\"",
     "test:watch": "npx jest --watch --detectOpenHandles",
     "build-watch": "concurrently \"npx webpack --watch --mode development\" \"npm run sass\"",
     "sass": "node-sass public/styles/main.scss public/styles/style.css -w",
-    "build:dev": "vite build && nodemon server/index.js"
+    "build:dev": "vite build && nodemon server/index.mjs"
   },
   "dependencies": {
-    "serve": "^14.0.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.21.0",
     "@react-oauth/google": "^0.12.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -30,14 +31,17 @@
     "chart.js": "^4.4.5",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "formik": "^2.4.6",
+    "luxon": "^3.5.0",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-bubbles": "^0.0.1",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-google-calendar-api": "^2.3.0",
     "react-google-recaptcha": "^3.1.0",
@@ -48,6 +52,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "serve": "^14.0.1",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.5.0",
     "yup": "^1.4.0"
