--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "concurrently \"serve -s dist 5137\" \"node server/index.mjs\"",
+    "start": "concurrently \"serve -s dist -l 5137\" \"node server/index.mjs\"",
     "test:watch": "npx jest --watch --detectOpenHandles",
     "build-watch": "concurrently \"npx webpack --watch --mode development\" \"npm run sass\"",
     "sass": "node-sass public/styles/main.scss public/styles/style.css -w",
@@ -27,18 +27,25 @@
     "@react-oauth/google": "^0.12.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.5",
     "concurrently": "^9.0.1",
+    "core-js": "^3.38.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "formik": "^2.4.6",
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "nodemailer": "^6.9.15",
+    "q": "^1.5.1",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-bubbles": "^0.0.1",
     "react-chartjs-2": "^5.2.0",
