--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "concurrently \"serve -s dist -l 5137\" \"node server/index.mjs\"",
+    "node": "node server/index.mjs",
+    "vite": "serve -s dist -l 5137",
+    "start": "concurrently \"npm run node\" \"npm run vite\"",
     "test:watch": "npx jest --watch --detectOpenHandles",
     "build-watch": "concurrently \"npx webpack --watch --mode development\" \"npm run sass\"",
     "sass": "node-sass public/styles/main.scss public/styles/style.css -w",
@@ -59,7 +61,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
-    "serve": "^14.0.1",
+    "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.5.0",
     "yup": "^1.4.0"
