--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "alertifyjs": "^1.14.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.20.3",
@@ -46,7 +47,10 @@
     "inflight": "^1.0.6",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.15",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "q": "^1.5.1",
     "querystring": "^0.2.1",
     "react": "^18.3.1",
@@ -62,6 +66,8 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "sequelize": "^6.37.4",
+    "sequelize-cli": "^6.6.2",
     "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.5.0",
@@ -73,6 +79,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "babel-register": "^6.26.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
