--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^6.1.4",
     "@mui/x-date-pickers": "^7.21.0",
     "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "alertifyjs": "^1.14.0",
