--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:dev": "vite build && nodemon server/index.mjs",
     "node": "node server/index.mjs",
     "vite": "vite preview",
-    "serve": "serve -s dist -l 5137",
-    "start": "concurrently \"npm run node\" \"npm run vite\""
+    "serve": "serve -s dist -l 4173",
+    "start": "concurrently \"npm run node\" \"npm run serve\""
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -26,14 +26,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
-    "@mui/x-date-pickers": "^7.21.0",
+    "@mui/x-data-grid": "^7.22.0",
+    "@mui/x-date-pickers": "^7.22.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "alertifyjs": "^1.14.0",
+    "axios": "^1.7.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-es2015": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "chart.js": "^4.4.5",
     "concurrently": "^9.0.1",
@@ -72,6 +75,7 @@
     "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.5.0",
+    "use-debounce": "^10.0.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
