--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "q": "^1.5.1",
